--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,8 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.svg" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link href="https://fonts.googleapis.com/css2?family=B612:ital,wght@0,400;1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <title>PlanNaPlan</title>
 </head>
 
